--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "intellex-shared-client",
-  "version": "0.0.1-SNAPSHOT.202512112103",
-  "description": "OpenAPI client for intellex-shared-client",
-  "author": "OpenAPI-Generator",
+  "name": "@intellex/shared-client",
+  "version": "0.1.0",
+  "description": "Intellex API TypeScript client (generated from OpenAPI)",
+  "author": "Intellex",
   "repository": {
     "type": "git",
-    "url": "https://github.com/GIT_USER_ID/GIT_REPO_ID.git"
+    "url": "https://github.com/intellex-ai/intellex-shared"
   },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -15,7 +15,14 @@
     "build": "tsc && tsc -p tsconfig.esm.json",
     "prepare": "npm run build"
   },
-  "devDependencies": {
+  "dependencies": {
     "typescript": "^4.0 || ^5.0"
+  },
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "publishConfig": {
+    "access": "public"
   }
 }
